# coctione_libri

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  settings.toml
app/: __init__.py  constants.py
app/blueprints/admin/: __init__.py  operations.py  routes.py
app/blueprints/auth/: __init__.py  forms.py  handlers.py  routes.py
app/blueprints/main/: __init__.py  forms.py  handlers.py  operations.py  render.py  routes.py
app/blueprints/sources/: __init__.py  operations.py  routes.py
app/blueprints/stats/: __init__.py  operations.py  routes.py
app/blueprints/tags/: __init__.py  operations.py  routes.py
app/cli/: __init__.py  import_from_raindrop.py  import_pdf.py  user_manager.py
app/models/: __init__.py  cookies.py  documents.py  users.py
app/static/css/: coctione_libri.css  coctione_libri.css.map
app/static/css/sass/: styles.scss
app/templates/: __root.html  _flask_messages.html  _messages.html  _navbar.html  document_edit.html  edit.html  login.html  main.html  main_table.htmx  tag_display.htmx  tag_edit.htmx  tags.html
app/templates/admin/: st.html
app/templates/admin/hx/: tr.html  tr_edit.html
app/templates/auth/: login.html  register.html
app/templates/main/: add_document.html  add_edit.html  display.html  edit.html  edit_document.html  main.html  manage.html  manage_document.html  new.html  table.htmx
app/templates/main/hx/: _status_icon.html  display_table.html  display_table_caption.html  display_table_thead.html  display_table_tr.html  edit_field_complexity.html  edit_field_dates_cooked.html  edit_field_file_.html  edit_field_notes.html  edit_field_quality.html  edit_field_source.html  edit_field_tag.html  edit_field_title.html  edit_field_url_.html  edit_filesize.html  edit_last_updated.html
app/templates/main/partials/: _status_icon.html  display_search_control.html  display_table.html  display_table_caption.html  display_table_thead.html  display_table_tr.html  edit_category.html  edit_created.html  edit_field_complexity.html  edit_field_dates_cooked.html  edit_field_file_.html  edit_field_notes.html  edit_field_quality.html  edit_field_source.html  edit_field_tag.html  edit_field_title.html  edit_field_url_.html  edit_form_complexity.html  edit_form_delete.html  edit_form_file.html  edit_form_notes.html  edit_form_quality.html  edit_form_source.html  edit_form_tags.html  edit_form_title.html  edit_form_url.html  edit_last_updated.html  main_table.html  table.html  tr.html
app/templates/sources/: sources.html
app/templates/sources/hx/: tr.html  tr_edit.html
app/templates/stats/: stats.html
app/templates/tags/: tags.html
app/templates/tags/hx/: tr.html  tr_edit.html
app/templates/tags/partials/: edit.html  tag_row.html  tr.html  tr_edit.html
deployment/: render_build.sh
